gitops-repo/flag-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  labels:
    app: flag-service
spec:
  type: ClusterIP
  selector:
    app: flag-service
  ports:
    - port: 8002
      targetPort: 8002
      protocol: TCP
